# gui-vizkit3d_debug_drawings

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  README.asciidoc  README.md  install_dependencies.sh  manifest.xml  vizkit3dDebugDrawings.kdev4
.circleci/: config.yml
.kdev4/: vizkit3dDebugDrawings.kdev4
doc/: class_diagram.mdj  slides.odp
src/: CMakeLists.txt  CommandDispatcher.cpp  CommandDispatcher.h  DebugDrawCommand.h  DebugDrawing.cpp  DebugDrawing.h  DebugDrawing.hpp  DebugDrawingColors.cpp  DebugDrawingColors.h  DebugDrawingColors.hpp  DebugDrawingWeakNoops.cpp  DeclaredChannels.cpp  DeclaredChannels.hpp  Drawing.h  Drawing.hpp  DrawingManager.cpp  DrawingManager.h  DrawingManager.hpp  Dummy.cpp  Dummy.hpp  Main.cpp  PlotDataPoint.h  PlotDrawing.h  StaticDeclarationHelpers.cpp  StaticDeclarationHelpers.hpp  StaticDeclarationHelpersWeakNoops.cpp  vizkit3d_debug_drawings.pc.in
src/DrawingCommands/: SphereCommand.cpp  SphereCommand.h
src/commands/: BoostSerializationExports.h  BoostSerializationExports.hpp  BoostSerializationHelpers.hpp  ClearDrawingCommand.cpp  ClearDrawingCommand.h  ClearDrawingCommand.hpp  ClearPlotCommand.cpp  ClearPlotCommand.h  ClearPlotCommand.hpp  Command.cpp  Command.h  Command.hpp  CommandBuffer.cpp  CommandBuffer.h  CommandBuffer.hpp  DrawCommand.cpp  DrawCommand.h  DrawCommand.hpp  DrawVizkitTypeCommand.cpp  DrawVizkitTypeCommand.h  PlotCommand.cpp  PlotCommand.h  PlotCommand.hpp  RemoveDrawingCommand.cpp  RemoveDrawingCommand.h  RemoveDrawingCommand.hpp
src/commands/primitives/: DrawAABBCommand.cpp  DrawAABBCommand.h  DrawAABBCommand.hpp  DrawArrowCommand.cpp  DrawArrowCommand.h  DrawArrowCommand.hpp  DrawAxesCommand.cpp  DrawAxesCommand.h  DrawAxesCommand.hpp  DrawCylinderCommand.cpp  DrawCylinderCommand.h  DrawCylinderCommand.hpp  DrawPolyLineCommand.cpp  DrawPolyLineCommand.h  DrawPolyLineCommand.hpp  DrawRingCommand.cpp  DrawRingCommand.h  DrawRingCommand.hpp  DrawSphereCommand.cpp  DrawSphereCommand.h  DrawSphereCommand.hpp  DrawTextCommand.cpp  DrawTextCommand.h  DrawTextCommand.hpp  DrawWireframeBoxCommand.cpp  DrawWireframeBoxCommand.h  DrawWireframeBoxCommand.hpp
src/dispatch/: CommandDispatcherFactory.cpp  CommandDispatcherFactory.hpp  ExistingWidgetDispatcher.cpp  ExistingWidgetDispatcher.hpp  ICommandDispatcher.hpp  PortDispatcher.cpp  PortDispatcher.hpp  StandaloneDispatcher.cpp  StandaloneDispatcher.hpp
test/: CMakeLists.txt  draw.h  draw.hpp  draw_test.cpp  draw_test_attach.cpp  draw_test_disable.cpp  draw_test_lib_app.cpp  draw_test_library.cpp  draw_test_standalone.cpp  port_send_test.cpp  serialization_test.cpp  t.h  test_Dummy.cpp
test/ports/: CMakeLists.txt  main-orogen_default_component__Task.cpp
test/ports/orogen/tasks/: DeployerComponent.cpp  TaskBase.cpp  TaskBase.hpp
test/ports/orogen/typekit/type_info/component/: TaskStates.hpp
test/ports/tasks/: Task.cpp  Task.hpp
viz/: CMakeLists.txt  DebugDrawingVisualization.cpp  DebugDrawingVisualization.hpp  DebugPlotVisualization.cpp  DebugPlotVisualization.hpp  DrawingVisualization.cpp  DrawingVisualization.hpp  qcustomplot.cc  qcustomplot.h  vizkit3dDebugDrawings-viz.pc.in  vizkit3d_debug_drawings-viz.pc.in  vizkit3d_debug_drawings_command-viz-qt5.pc.in  vizkit3d_debug_drawings_plot-viz.pc.in  vizkit_plugin.rb
